force-app/main/default/objects/ccrz__E_ProductStorefront__c/ccrz__E_ProductStorefront__c.object-meta.xml
<CustomObject>
    <description>Product data specific to a particular storefront</description>
    <label>CC Product Storefront</label>
    <nameField>
        <displayFormat>PSF-{000000}</displayFormat>
        <label>CC Product Storefront Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Product Storefronts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>