force-app/main/default/objects/ccrz__E_ProductStorefront__c/fields/ccrz__Product__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Product__c</fullName>
    <label>CC Product</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>CC Product Storefronts</relationshipLabel>
    <relationshipName>CC_Product_Storefronts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>