force-app/main/default/objects/ccrz__E_ProductStorefront__c/fields/ccrz__ShortURL__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShortURL__c</fullName>
    <description>a shortened url to a product in a specific storefront</description>
    <label>ShortURL</label>
    <type>Url</type>
</CustomField>