force-app/main/default/objects/ccrz__E_ProductStorefront__c/fields/ccrz__Storefront__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Storefront__c</fullName>
    <label>Storefront</label>
    <length>128</length>
    <type>Text</type>
</CustomField>